npm run build:prod with conponent.js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="root"></div>
     <script type="module">
-        import { createElement, component, render } from './component.js'
+        import { createElement, component, render } from './src/compnent.js'
         const stateData = [
             { hash: '#home', text: 'home' },
             { hash: '#cpu',  text: 'cpu'  },
